@@ -10,7 +10,7 @@ public class AssertTrueTest {
     
     public String successOrFailure(String fragment, String evaluationResult) {
         return new TestRig()
-            .withStubbedEvaluationResult(new Boolean(evaluationResult))
+            .withStubbedEvaluationResult(Boolean.valueOf(evaluationResult))
             .processFragment(fragment)
             .successOrFailureInWords();
     }
